# linyaps-web-store-installer

./: CMakeLists.txt  README.md  README_zh_CN.md
.reuse/: dep5
archlinux/: PKGBUILD
debian/: changelog  control
ll-installer/: CMakeLists.txt  installer-dialog.cpp  main.cpp  space.linglong.Installer.desktop
